--- a/public/resume.html
+++ b/public/resume.html
@@ -297,19 +297,19 @@ Laboratory</em></p>
 <dl>
 <dt>2021-2023</dt>
 <dd>
-<strong>Software Engineer at Chura Data:</strong>
+<strong>Intern Software Engineer at Chura Data:</strong>
 </dd>
 </dl>
 <p>Worked on building web applications and performing data analysis.</p>
 <dl>
 <dt>2022-2023</dt>
 <dd>
-<strong>Research at a Certain Graduate University:</strong>
+<strong>Software Development at a Certain Graduate University:</strong>
 </dd>
 </dl>
 <p>Involved in the entire software development lifecycle, from
 requirements definition and detailed design to implementation and
-testing, for a video editing software for research purposes in a lab.
+testing, for a video editing software in a lab at a graduate university.
 The name of the lab is kept confidential due to contractual
 obligations.</p>
 <h2 id="technical-experience">Technical Experience</h2>
