chore: update resume

--- a/public/resume.html
+++ b/public/resume.html
@@ -271,9 +271,9 @@
 <hr />
 <blockquote>
 <p>Software Engineer from Okinawa, Japan with language exchange
-experience in English during high school. Currently studying at Ryukyu
-University, expected to obtain a Bachelor’s degree in Information
-Engineering. Born in 2000, 23 years old. Biologically male, pronouns are
+experience in English during high school. Graduated from Ryukyu
+University with a Bachelor’s degree in Information
+Engineering. Born in 2000, 24 years old. Biologically male, pronouns are
 He/Him.</p>
 </blockquote>
 <hr />
